Fixed layout issue

--- a/projects/proof/frontend/src/index.css
+++ b/projects/proof/frontend/src/index.css
@@ -23,3 +23,7 @@ a {
 .no-padding {
     padding: 0px !important;
 }
+
+.full-height {
+    height: 100vh !important;
+}
